--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "handlebars": "^4.0.11",
-    "jquery": ">=3.5.0",
+    "webrtc-adapter" : "^7.4.0",
+    "jquery": "^3.5.0",
     "semantic-ui-css": "^2.4",
     "simplewebrtc": "^3.0.1"
   }
